Responsividade para tablets

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -35,3 +35,19 @@
 
     background: url("../imgs/Pesquisa.svg") no-repeat;
 }
+
+@media screen and (min-width: 1024px) {
+    .banner__titulo{
+        font-size: 36px;
+    } 
+    
+    .banner__pesquisa{
+        width: 50vw;
+        padding: 20px 24px;
+    }
+    
+    .banner__pesquisa::placeholder{
+        font-size: 16px;
+        background-position: 15%;
+    }
+}
