--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -12,7 +12,8 @@
     width: 100%;
 }
 
-.swiper-button-next, .swiper-button-prev{
+.swiper-button-next, 
+.swiper-button-prev{
     display: none;
 }
 
@@ -74,4 +75,28 @@
     text-decoration: none;
     font-size: 16px;
     font-weight: 700;
+}
+
+@media screen and (min-width: 1024px){
+    .carrossel__titulo{
+        font-size: 26px;
+        padding: 2em 0 1em 0;
+    }
+    .swiper-pagination{
+        margin-bottom: 2em;
+    }
+
+    .swiper{
+        width: 60%;
+    }
+
+    .swiper-button-next, 
+    .swiper-button-prev{
+        display: block;
+    }
+
+    .card{
+        width: 50%;
+        margin: 2em auto ;
+    }
 }
