--- a/styles/header.css
+++ b/styles/header.css
@@ -60,11 +60,13 @@
     text-transform: uppercase;
 }
 
-/* ELEMENTOS TABLET */
+/* ELEMENTOS QUE NÃO DEVEM APARECER EM RESOLUÇÃO DE CELULAR */
 
-.container__titulo, .opcoes{
+.container__titulo, .opcoes, .container__link p{
     display: none;
 }
+
+
 
 @media screen and (min-width: 1024px){
     /*ELEMENTOS QUE DEVEM SUMIR*/
@@ -88,11 +90,10 @@
     /*OPCOES DO TABLET*/
 
     .opcoes{
-        display: block;
+        display: flex;
         font-family: var(--fonte-principal);
         font-size: 16px;
         font-weight: 400;
-        display: flex;
     }
     
     .opcoes__item{
@@ -146,5 +147,38 @@
 
     .container__imagem--compras, .container__imagem--perfil{
         margin-right: 3em;
+    }
+}
+
+
+@media screen and (min-width: 1728px){
+    .container__link p{
+        display: block;
+    }
+
+    .container__link{
+        display: flex;
+        align-items: center;
+        margin-right: 3em;
+        
+        text-decoration: none;
+        color: #000;
+        font-family: var(--fonte-principal);
+        font-size: 20px;
+        font-weight: 400;
+        
+    }
+
+    .container__imagem--compras{
+        margin-right: 0;
+    }
+
+    .container__imagem--perfil{
+        margin-right: 0;
+    }
+
+    .opcoes{
+        margin-right: auto;
+        margin-left: 2em;
     }
 }
