--- a/styles/header.css
+++ b/styles/header.css
@@ -18,6 +18,22 @@
     display: inline-block;
 }
 
+.container__rotulo{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 72px;
+    width: 72px;
+}
+
+.container__botao:checked:checked ~ .container__rotulo > .cabecalho__menu-hamburguer{
+    background-image: url('../imgs/menu_black.svg');
+}
+
+.container__botao:checked:checked ~ .container__rotulo {
+    background: var(--azul);
+}
+
 .container{
     display: flex;
     align-items: center;
@@ -70,7 +86,7 @@
 
 @media screen and (min-width: 1024px){
     /*ELEMENTOS QUE DEVEM SUMIR*/
-    .cabecalho__menu-hamburguer, .container__imagem--favorito{
+    .cabecalho__menu-hamburguer, .container__imagem--favorito, .container__rotulo{
         display: none;
     }
 
@@ -91,6 +107,7 @@
 
     .opcoes{
         display: flex;
+        align-items: center;
         font-family: var(--fonte-principal);
         font-size: 16px;
         font-weight: 400;
@@ -98,26 +115,31 @@
     
     .opcoes__item{
         text-transform: uppercase;
-        color: #000;
-        padding: 0 2em;
-    }
-    
-    .opcoes__item a{
         text-decoration: none;
+
+        padding:  1em;
         color: #000;
     }
 
-    .opcoes__label:hover, .opcoes__item:hover{
+    .opcoes__botao:checked ~ .opcoes__label > .opcoes__item{
         color: var(--branco);
         background: var(--azul);
     }
 
-    .opcoes__item a:hover{
+    
+    .opcoes__item:hover{
         color: var(--branco);
+        background: var(--azul);
+    }
+    
+    .opcoes__item > a{
+        text-transform: uppercase;
+        text-decoration: none;
+        color: #000;
     }
 
-    .opcoes__item{
-        padding: 1em;
+    .opcoes__item:hover > a{
+        color: var(--branco);
     }
 
     .opcoes__lista li{
@@ -142,7 +164,7 @@
     .opcoes__lista{
         background: var(--branco);
         position: absolute;
-        top: 100%;
+        top: 84%;
     }
 
     .container__imagem--compras, .container__imagem--perfil{
